// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar (unit tests) when disabled dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-calendar>
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="5" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="6" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="7" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="8" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;

exports[`Calendar (unit tests) when initial date is passed and is a valid date should match the snapshot 1`] = `
<kv-calendar initial-date="2022-08-01">
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="5" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="6" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="7" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="8" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;

exports[`Calendar (unit tests) when max date is passed and is a valid date should match the snapshot 1`] = `
<kv-calendar initial-date="2022-08-01" max-date="2022-04-01">
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="5" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="6" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="7" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="8" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" disabled="" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" disabled="" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;

exports[`Calendar (unit tests) when min date is passed and is a valid date should match the snapshot 1`] = `
<kv-calendar initial-date="2022-08-1" min-date="2022-04-01">
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="5" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="6" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="7" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="8" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;

exports[`Calendar (unit tests) when selected dates is passed and all dates are valid should match the snapshot 1`] = `
<kv-calendar>
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day active="" day="5" exportparts="day-container" leftrounded=""></kv-calendar-day>
            <kv-calendar-day active="" day="6" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day active="" day="7" exportparts="day-container" rightrounded=""></kv-calendar-day>
            <kv-calendar-day day="8" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;

exports[`Calendar (unit tests) when uses default props should match the snapshot 1`] = `
<kv-calendar>
  <mock:shadow-root>
    <div class="calendar" part="calendar-container">
      <div class="calendar__header">
        <kv-action-button-icon icon="kv-arrow-left" type="tertiary"></kv-action-button-icon>
        <div class="month">
          August 2022
        </div>
        <kv-action-button-icon icon="kv-arrow-right" type="tertiary"></kv-action-button-icon>
      </div>
      <div class="calendar__body">
        <div class="calendar-month" part="month-container">
          <div class="calendar-month__weekdays">
            <div class="weekday">
              Su
            </div>
            <div class="weekday">
              Mo
            </div>
            <div class="weekday">
              Tu
            </div>
            <div class="weekday">
              We
            </div>
            <div class="weekday">
              Th
            </div>
            <div class="weekday">
              Fr
            </div>
            <div class="weekday">
              Sa
            </div>
          </div>
          <div class="calendar-month__days">
            <div class="day day--blank"></div>
            <kv-calendar-day day="1" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="2" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="3" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="4" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="5" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="6" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="7" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="8" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="9" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="10" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="11" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="12" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="13" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="14" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="15" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="16" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="17" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="18" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="19" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="20" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="21" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="22" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="23" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="24" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="25" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="26" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="27" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="28" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="29" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="30" exportparts="day-container"></kv-calendar-day>
            <kv-calendar-day day="31" exportparts="day-container"></kv-calendar-day>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar>
`;
